clipping issue fixed on tweets

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -13,6 +13,7 @@
   font-size: 24px;
   padding-left: 15px;
   padding-right: 15px;
+  z-index: 9999;
 }
 
 /* Styling for dynamic arrow to toggle tweet */
